trunk/Archive2/b3/7bf2314826ef21/output
main.cpp: In function 'Board LoopMoves(Board&)':
main.cpp:46:11: error: 'struct Board' has no member named 'push_back'
         b.push_back(Move(b,x));
           ^
main.cpp:46:29: error: 'Move' was not declared in this scope
         b.push_back(Move(b,x));
                             ^
main.cpp:51:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
